Enrich detection with sample information
