# src/python/pupil_detector/models/sample.py
@@ -1,0 +1,17 @@
+# coding: utf-8
+
+from pydantic import BaseModel, Field, validator
+
+class Sample(BaseModel):
+    width: int = Field(alias="width")
+    height: int = Field(alias="height")
+    
+    @validator("width")
+    def x_min(cls, value):
+        assert value >= 0
+        return value
+
+    @validator("height")
+    def y_min(cls, value):
+        assert value >= 0
+        return value
